설정창 수정완료1

--- a/html/ui.css
+++ b/html/ui.css
@@ -280,7 +280,7 @@
 
 #btn_setting button {
     width: 112px;
-    height: 56px;
+    height: 50px;
     margin-bottom:15px;
     font-family: 'NeoDunggeunmo';
     background-color: #202020;
@@ -295,7 +295,7 @@
     line-height: 24px;
     min-height: 40px;
     min-width: 80px;
-    padding: 16px 20px;
+    padding: 14gitpx 20px;
     position: relative;
     user-select: none;
     -webkit-user-select: none;
