--- a/html/ui.css
+++ b/html/ui.css
@@ -189,7 +189,7 @@
     background-color: #f8f9fa;
     border: 1px solid #f8f9fa;
     border-radius: 50px;
-    color: #3c4043;
+    color: #000000;
     cursor: pointer;
     height: 36px;
     line-height: 27px;
@@ -205,8 +205,8 @@
 #item_use button:hover {
     border-color: #dadce0;
     border-radius: 50px;
-    box-shadow: rgba(0, 0, 0, .1) 0 2px 2px;
-    color: #202124;
+    box-shadow: rgba(0, 0, 0, .2) 0 2px 2px;
+    color: #d90000;
 }
 
 #item table {
@@ -273,14 +273,40 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* 저장슬롯_ 팝업 */
-#loadFiled {
-    background-image: url("/img/background/cat2.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 1024;
-    height: 576;
-/* >>>>>>> ef6601e (7월 5일 작업본) */
+#btn_setting {
+    display: flex;
+    flex-direction: column;
+}
+
+#btn_setting button {
+    width: 112px;
+    height: 50px;
+    margin-bottom:15px;
+    font-family: 'NeoDunggeunmo';
+    background-color: #202020;
+    border-radius: 4px;
+    border: 0;
+    box-shadow: rgba(53, 53, 53, 0.5) 0 -1px 3px 0 inset, rgba(98, 98, 98, 0.1) 0 3px 6px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inherit;
+    font-size: 18px;
+    line-height: 24px;
+    min-height: 40px;
+    min-width: 80px;
+    padding: 14gitpx 20px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: baseline;
+    transition: all .2s cubic-bezier(.22, .61, .36, 1);
+}
+
+#setting button:hover {
+    background-color: #000000;
+    transform: translateY(-2px);
 }
 
 #sound_setting {
