--- a/html/ui.css
+++ b/html/ui.css
@@ -139,7 +139,7 @@
     border-top-right-radius: 8px;
     text-align: center;
     padding-top: 12px;
-    margin-left: 90px;
+    margin-left: 100px;
 }
 
 #item {
@@ -257,7 +257,7 @@
     border-top-right-radius: 8px;
     text-align: center;
     padding-top: 12px;
-    margin-left: 260px;
+    margin-left: 270px;
 }
 
 #setting {
@@ -354,7 +354,7 @@
     border-top-right-radius: 8px;
     text-align: center;
     padding-top: 12px;
-    margin-left: 260px;
+    margin-left: 170px;
 }
 
 #loadList {
@@ -371,18 +371,33 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-#loadList  li {
+
+
+#loadList li {
+    width: 600px;
     font-family: 'NeoDunggeunmo';
     font-size: 20px;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#loadList li:nth-child(-n+4) {
+    margin-bottom: 15px;
 }
 
 .character {
     background-image: url(/img/character/load/Dr\ Frankenstein\ Face.png);
     background-repeat: no-repeat;
     background-size: cover;
+    margin-right: 30px;
     width: 50px;
     height: 50px;
+}
+
+#loadList span {
+    width: 150px;
 }
 
 #loadList button {
@@ -408,7 +423,7 @@
 }
 
 #loadList button:hover {
-  background-color: #1e293b;
+  background-color: #0b0b0c;
   color: #fff;
 }
 
