--- a/html/ui.css
+++ b/html/ui.css
@@ -327,8 +327,8 @@
 
 
 
-/* 저장슬롯_ 팝업 */
-#Loadfiled {
+/* 저장슬롯 load_ 팝업 */
+#loadFiled {
     background-image: url("/img/background/cat2.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -430,13 +430,143 @@
 
 
 
+/* 저장슬롯 save_ 팝업 */
+#saveFiled {
+    background-image: url("/img/background/cat2.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1024;
+    height: 576;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#tag_saveFiled {
+    width: 100%;
+}
+
+#tag_save{
+    font-family: 'NeoDunggeunmo';
+    font-size: 19px;
+    background-color: white;
+    width: 115px;
+    height: 35px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    text-align: center;
+    padding-top: 12px;
+    margin-left: 170px;
+}
+
+#saveList {
+    font-family: 'NeoDunggeunmo';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 750px;
+    height: 400px;
+    border: 5px solid white;
+    border-style: double;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+
+#saveList li {
+    width: 600px;
+    font-family: 'NeoDunggeunmo';
+    font-size: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#saveList li:nth-child(-n+4) {
+    margin-bottom: 15px;
+}
+
+.character {
+    background-image: url(/img/character/load/Dr\ Frankenstein\ Face.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-right: 30px;
+    width: 50px;
+    height: 50px;
+}
+
+
+#saveList span {
+    width: 150px;
+}
+
+
+#saveList button {
+  font-family: 'NeoDunggeunmo';
+  font-size: 18px;
+  background-color: #fff;
+  border: 0 solid #e2e8f0;
+  border-radius: 50px;
+  box-sizing: border-box;
+  color: #0d172a;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none #0d172a solid;
+  text-decoration-thickness: auto;
+  transition: all .1s cubic-bezier(.4, 0, .2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#saveList button:hover {
+  background-color: #0b0b0c;
+  color: #fff;
+}
+
 
 
 
 
 
 /* 기본 텍스트 박스_대화 */
-#text_box {}
+#text_box {
+    background-image: url("/img/background/cat2.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 576;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#box {
+    display: flex;
+    width: 900px;
+    height: 230px;
+    border: 5px solid white;
+    border-style: double;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 30px;
+}
+
+#text {
+    font-family: 'NeoDunggeunmo';
+    font-size: 20px;
+    color: white;
+    padding: 20px;
+}
 
 /* 퀴즈 정답 입력 박스 */
 #quize_box {}
