--- a/html/ui.css
+++ b/html/ui.css
@@ -13,7 +13,7 @@
 
 /* 게임시작 창 */
 #startPage {
-    background-image: url("/img/background/cat1.jpeg");
+    background-image: url("/img/background/startPage.png");
     background-repeat: no-repeat;
     background-size: cover;
     width: 1024;
