게시판을 두번째 눌렀을때 이미지 변경

--- a/css/ui.css
+++ b/css/ui.css
@@ -609,6 +609,12 @@
     align-items: center;
 }
 
+#_answer_input {
+    font-family: 'NeoDunggeunmo';
+    font-size: 16px;
+    color: white;
+}
+
 #_box_q {
     display: flex;
     flex-direction: column;
