--- a/css/ui.css
+++ b/css/ui.css
@@ -722,3 +722,11 @@
   .prolSkip:focus-visible {
     box-shadow: none;
   }
+
+
+  /* 검은 배경 화면 */
+  #_stg_back {
+    background-color: rgb(15, 15, 15);
+    width: 1024px;
+    height: 576px;
+  }
