필요 없는 부분 삭제함

--- a/css/ui.css
+++ b/css/ui.css
@@ -726,7 +726,10 @@
 
   /* 검은 배경 화면 */
   #_stg_back {
-    background-color: rgb(15, 15, 15);
+    /* background-color: rgb(15, 15, 15); */
+    /* background-image: url(/img/cat.jpg); */
+    background-image: url(/img/playImage/ghost_1.jpeg);
+    background-size: cover;
     width: 1024px;
     height: 576px;
   }
