화면 넘어갈때 깜빡거리는거 작업하던거

--- a/css/ui.css
+++ b/css/ui.css
@@ -733,3 +733,9 @@
     width: 1024px;
     height: 576px;
   }
+  #_map_change {
+    background-color: #000000;
+    background-size: cover;
+    width: 1024px;
+    height: 576px;
+  }
